--- a/golf/fusion/extract_embbeding_stgcn.ipynb
+++ b/golf/fusion/extract_embbeding_stgcn.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6ad186be",
+   "metadata": {},
+   "source": [
+    "### 작동 버전, valid로 지정된 데이터에 대해서만 임베딩 추출 문제"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "00d3fe96",
@@ -10,14 +18,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "07/20 01:11:10 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
+      "07/20 18:19:56 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - \n",
       "------------------------------------------------------------\n",
       "System environment:\n",
       "    sys.platform: win32\n",
       "    Python: 3.8.20 (default, Oct  3 2024, 15:19:54) [MSC v.1929 64 bit (AMD64)]\n",
       "    CUDA available: True\n",
       "    MUSA available: False\n",
-      "    numpy_random_seed: 423575249\n",
+      "    numpy_random_seed: 509173727\n",
       "    GPU 0: NVIDIA GeForce RTX 4060 Laptop GPU\n",
       "    CUDA_HOME: C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\n",
       "    NVCC: Cuda compilation tools, release 12.6, V12.6.20\n",
@@ -45,13 +53,13 @@
       "    cudnn_benchmark: False\n",
       "    dist_cfg: {'backend': 'nccl'}\n",
       "    mp_cfg: {'mp_start_method': 'fork', 'opencv_num_threads': 0}\n",
-      "    seed: 423575249\n",
+      "    seed: 509173727\n",
       "    Distributed launcher: none\n",
       "    Distributed training: False\n",
       "    GPU number: 1\n",
       "------------------------------------------------------------\n",
       "\n",
-      "07/20 01:11:10 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
+      "07/20 18:19:56 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Config:\n",
       "ann_file = 'D:\\\\golfDataset\\\\dataset\\\\train\\\\crop_pkl\\\\skeleton_dataset_90_10.pkl'\n",
       "auto_scale_lr = dict(base_batch_size=128, enable=False)\n",
       "custom_hooks = [\n",
@@ -78,7 +86,7 @@
       "    mp_cfg=dict(mp_start_method='fork', opencv_num_threads=0))\n",
       "fp16 = dict(loss_scale='dynamic', type='Fp16OptimizerHook')\n",
       "launcher = 'none'\n",
-      "load_from = 'work_dirs/my_stgcnpp/best_acc_top1_epoch_5.pth'\n",
+      "load_from = 'checkpoints\\\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth'\n",
       "log_level = 'INFO'\n",
       "log_processor = dict(by_epoch=True, type='LogProcessor', window_size=20)\n",
       "model = dict(\n",
@@ -148,6 +156,7 @@
       "    dict(type='PoseDecode'),\n",
       "    dict(num_person=2, type='FormatGCNInput'),\n",
       "    dict(type='PackActionInputs'),\n",
+      "    dict(type='AddFrameDirToMeta'),\n",
       "]\n",
       "train_cfg = dict(\n",
       "    max_epochs=8, type='EpochBasedTrainLoop', val_begin=1, val_interval=1)\n",
@@ -183,6 +192,7 @@
       "    dict(type='PoseDecode'),\n",
       "    dict(num_person=2, type='FormatGCNInput'),\n",
       "    dict(type='PackActionInputs'),\n",
+      "    dict(type='AddFrameDirToMeta'),\n",
       "]\n",
       "val_cfg = dict(type='ValLoop')\n",
       "val_dataloader = dict(\n",
@@ -223,6 +233,7 @@
       "    dict(type='PoseDecode'),\n",
       "    dict(num_person=2, type='FormatGCNInput'),\n",
       "    dict(type='PackActionInputs'),\n",
+      "    dict(type='AddFrameDirToMeta'),\n",
       "]\n",
       "vis_backends = [\n",
       "    dict(type='LocalVisBackend'),\n",
@@ -233,8 +244,8 @@
       "    ])\n",
       "work_dir = './work_dirs\\\\my_stgcnpp'\n",
       "\n",
-      "07/20 01:11:10 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
-      "07/20 01:11:10 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
+      "07/20 18:19:58 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Distributed training is not used, all SyncBatchNorm (SyncBN) layers in the model will be automatically reverted to BatchNormXd layers if they are used.\n",
+      "07/20 18:19:58 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - Hooks will be executed in the following order:\n",
       "before_run:\n",
       "(VERY_HIGH   ) RuntimeInfoHook                    \n",
       "(BELOW_NORMAL) LoggerHook                         \n",
@@ -327,9 +338,9 @@
       "\n",
       "size mismatch for cls_head.fc.weight: copying a param with shape torch.Size([60, 256]) from checkpoint, the shape in current model is torch.Size([2, 256]).\n",
       "size mismatch for cls_head.fc.bias: copying a param with shape torch.Size([60]) from checkpoint, the shape in current model is torch.Size([2]).\n",
-      "07/20 01:11:11 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 44 videos remain after valid thresholding\n",
-      "07/20 01:11:21 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
-      "✅ Saved embeddings: (44, 10, 2) → D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp\\train_embeddings.npy\n",
+      "07/20 18:19:59 - mmengine - \u001b[4m\u001b[97mINFO\u001b[0m - 44 videos remain after valid thresholding\n",
+      "07/20 18:19:59 - mmengine - \u001b[5m\u001b[4m\u001b[33mWARNING\u001b[0m - The prefix is not set in metric class DumpResults.\n",
+      "✅ Saved embeddings: (44, 10, 256) → D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp\\train_embeddings.npy\n",
       "✅ Saved labels:     (44,) → D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp\\train_labels.npy\n"
      ]
     }
@@ -431,107 +442,6 @@
     "\n",
     "# 7) 결과 저장\n",
     "emb_array   = np.stack(final_embs, axis=0)       # (N, 256)\n",
-    "label_array = np.array(final_labels, dtype=np.int64)  # (N,)\n",
-    "\n",
-    "np.save(OUTPUT_EMB, emb_array)\n",
-    "np.save(OUTPUT_LABELS, label_array)\n",
-    "\n",
-    "print(f\"✅ Saved embeddings: {emb_array.shape} → {OUTPUT_EMB}\")\n",
-    "print(f\"✅ Saved labels:     {label_array.shape} → {OUTPUT_LABELS}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "761c05b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!/usr/bin/env python3\n",
-    "import os, sys\n",
-    "\n",
-    "# (필요시) 중복 OpenMP 런타임 허용\n",
-    "os.environ[\"KMP_DUPLICATE_LIB_OK\"] = \"True\"\n",
-    "\n",
-    "# 1) mmaction2 루트로 이동 & 모듈 경로 등록\n",
-    "BASE_DIR = r\"D:\\mmaction2\"\n",
-    "os.chdir(BASE_DIR)\n",
-    "sys.path.insert(0, BASE_DIR)\n",
-    "\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from mmengine.config import Config\n",
-    "from mmengine.runner import Runner, load_checkpoint\n",
-    "\n",
-    "# 2) 설정\n",
-    "CFG_PATH      = \"configs/skeleton/stgcnpp/my_stgcnpp.py\"\n",
-    "CKPT_PATH     = \"checkpoints/stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth\"\n",
-    "INPUT_PKL     = r\"D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_90_10.pkl\"\n",
-    "OUTPUT_EMB    = r\"D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp\\train_embeddings.npy\"\n",
-    "OUTPUT_LABELS = r\"D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp\\train_labels.npy\"\n",
-    "DEVICE        = \"cuda:0\"\n",
-    "# ---------------------------------------------\n",
-    "\n",
-    "# 3) Config 로드 & ann_file 덮어쓰기\n",
-    "cfg = Config.fromfile(CFG_PATH)\n",
-    "if hasattr(cfg, \"test_dataloader\"):\n",
-    "    cfg.test_dataloader.dataset.ann_file = INPUT_PKL\n",
-    "else:\n",
-    "    cfg.data.test.ann_file = INPUT_PKL\n",
-    "\n",
-    "# 4) Runner 생성 & 모델만 로드 (헤드 매칭 무시)\n",
-    "runner = Runner.from_cfg(cfg)\n",
-    "load_checkpoint(runner.model, CKPT_PATH, map_location=\"cpu\", strict=False)\n",
-    "runner.model.to(DEVICE).eval()\n",
-    "\n",
-    "# 5) cls_head 마지막 Linear 모듈 찾기\n",
-    "last_lin = None\n",
-    "for m in runner.model.cls_head.modules():\n",
-    "    if isinstance(m, nn.Linear):\n",
-    "        last_lin = m\n",
-    "if last_lin is None:\n",
-    "    raise RuntimeError(\"cls_head에 nn.Linear 레이어가 없습니다.\")\n",
-    "\n",
-    "# 6) test loop: 비디오 당 하나의 embedding & label 수집\n",
-    "final_embs = []\n",
-    "final_labels = []\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "    for batch in runner.test_dataloader:\n",
-    "        # 6-1) GT 라벨\n",
-    "        data_samples = batch[\"data_samples\"]\n",
-    "        gt_label = int(data_samples[0].gt_label)\n",
-    "        final_labels.append(gt_label)\n",
-    "\n",
-    "        # 6-2) raw_inputs 추출 (리스트 또는 Tensor)\n",
-    "        raw_inputs = batch[\"inputs\"]\n",
-    "\n",
-    "        # 6-3) 클립별로 hook → 임베딩 수집 → 평균\n",
-    "        clip_embs = []\n",
-    "        # 클립 임베딩을 모아줄 임시 리스트\n",
-    "        def _hook_fn(_, __, out):\n",
-    "            # out: (1, D)\n",
-    "            clip_embs.append(out.detach().cpu().squeeze(0))\n",
-    "        handle = last_lin.register_forward_hook(_hook_fn)\n",
-    "\n",
-    "        # 리스트인 경우 클립별로, 아니면 한 번만\n",
-    "        if isinstance(raw_inputs, list):\n",
-    "            for clip in raw_inputs:\n",
-    "                inp = clip.unsqueeze(0).to(DEVICE)  # (1, C, T, V, M)\n",
-    "                runner.model.forward(inp, data_samples, mode=\"predict\")\n",
-    "        else:\n",
-    "            inp = raw_inputs.unsqueeze(0).to(DEVICE) if raw_inputs.dim()==4 else raw_inputs.to(DEVICE)\n",
-    "            runner.model.forward(inp, data_samples, mode=\"predict\")\n",
-    "\n",
-    "        handle.remove()\n",
-    "\n",
-    "        # 클립별 임베딩 평균 → (D,)\n",
-    "        video_emb = torch.stack(clip_embs, dim=0).mean(dim=0)\n",
-    "        final_embs.append(video_emb.numpy())\n",
-    "\n",
-    "# 7) 결과 저장\n",
-    "emb_array = np.stack(final_embs, axis=0)  # (N, D)\n",
     "label_array = np.array(final_labels, dtype=np.int64)  # (N,)\n",
     "\n",
     "np.save(OUTPUT_EMB, emb_array)\n",
