--- a/golf/fusion/extract_embbeding_timesformer.ipynb
+++ b/golf/fusion/extract_embbeding_timesformer.ipynb
@@ -17,22 +17,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train Embeddings: 100%|███████████████████████| 393/393 [10:55<00:00,  1.67s/it]\n",
-      "Test Embeddings: 100%|██████████████████████████| 43/43 [01:13<00:00,  1.70s/it]"
+      "Train Embeddings:  38%|████████▊              | 167/436 [04:34<07:21,  1.64s/it]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Embeddings and labels saved.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 113\u001b[39m\n\u001b[32m    111\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    112\u001b[39m     cls_embs = feats                         \u001b[38;5;66;03m# (CLIPS_PER_VID, D)\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m113\u001b[39m emb = \u001b[43mcls_embs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdim\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcpu\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m.numpy()      \u001b[38;5;66;03m# (D,)\u001b[39;00m\n\u001b[32m    114\u001b[39m all_train_embs.append(emb)\n\u001b[32m    115\u001b[39m all_train_labels.append(label.item())\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
@@ -58,7 +54,7 @@
     "CLIPS_PER_VID = 5\n",
     "IMG_SIZE      = 224\n",
     "BATCH_SIZE    = 1\n",
-    "TEST_RATIO    = 0.1  # 테스트셋 비율\n",
+    "TEST_RATIO    = 0  # 테스트셋 비율\n",
     "device        = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "# ----------------- 재현성 ----------------------------\n",
@@ -167,10 +163,11 @@
     "        all_test_labels.append(label.item())\n",
     "\n",
     "# ----------------- 저장 ----------------------------\n",
-    "np.save(r\"embbeding_data\\timesformer\\train_embeddings.npy\", np.stack(all_train_embs))\n",
-    "np.save(r\"embbeding_data\\timesformer\\train_labels.npy\",   np.array(all_train_labels))\n",
-    "np.save(r\"embbeding_data\\timesformer\\test_embeddings.npy\",  np.stack(all_test_embs))\n",
-    "np.save(r\"embbeding_data\\timesformer\\test_labels.npy\",     np.array(all_test_labels))\n",
+    "np.save(r\"embbeding_data\\timesformer\\tsf_train_embeddings.npy\", np.stack(all_train_embs))\n",
+    "np.save(r\"embbeding_data\\timesformer\\tsf_train_labels.npy\",   np.array(all_train_labels))\n",
+    "np.save(r\"embbeding_data\\timesformer\\valid_embeddings.npy\",  np.stack(all_test_embs))\n",
+    "np.save(r\"embbeding_data\\timesformer\\validtest_labels.npy\",     np.array(all_test_labels))\n",
+    "# embedding 추출시에는 test 데이터는 사용하지 않음\n",
     "\n",
     "print(\"✅ Embeddings and labels saved.\")\n"
    ]
